Bug 90176 - [bisected] All 3D applications crash on LLVM git
Summary: [bisected] All 3D applications crash on LLVM git
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-25 17:46 UTC by Nick Sarnie
Modified: 2015-04-28 20:16 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
glxgears backtrace (36.37 KB, text/plain)
2015-04-25 17:46 UTC, Nick Sarnie
Details

Description Nick Sarnie 2015-04-25 17:46:47 UTC
Created attachment 115327 [details]
glxgears backtrace

Hi guys. Any 3D application will segfault when using LLVM git.
I've attached the backtrace.

Here is the commit that broke it from LLVM:

79cebfb15c5f80cc8bbc7d51da9f7827424125a is the first bad commit
commit 579cebfb15c5f80cc8bbc7d51da9f7827424125a
Author: Lang Hames <lhames@gmail.com>
Date:   Fri Apr 24 19:11:51 2015 +0000

    [AsmPrinter] Make AsmPrinter's OutStreamer member a unique_ptr.
    
    AsmPrinter owns the OutStreamer, so an owning pointer makes sense here. Using a
    reference for this is crufty.
    
    
    
    git-svn-id: https://llvm.org/svn/llvm-project/llvm/trunk@235752 91177308-0d34-0410-b5e6-96231b3b80d8


Thanks,
sarnex
Comment 1 Nick Sarnie 2015-04-28 20:16:24 UTC
Fixed by LLVM commit R600: Fix up for AsmPrinter's OutStreamer being a unique_ptr 

Thanks guys,
sarnex


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.